# Exercise1

./: pyproject.toml  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.upm/: store.json
