[tool.poetry]
name = "repl_nix_blog-with-users-end-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-CKEditor = "^0.4.6"
Flask-Gravatar = "^0.5.0"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
Werkzeug = "^2.2.3"
Flask-Bootstrap = "^3.3.7"
SQLAlchemy = "^2.0.5"
Flask = "^2.2.3"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
